--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
     <title>Hello, world!</title>
 </head>
 <body>
+<div class="clearfix"></div>
 
 
+<div class="container">
+    <div class="podl">
+    </div>
+</div>
 
-
-
+<canvas id="canvas" class="canvasnone"></canvas>
     <!--  Bootstrap Bundle with Popper -->
     <script crossorigin="anonymous"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
@@ -26,7 +30,10 @@
     <script crossorigin="anonymous"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="animation.js"></script>
     <script src="code.js"></script>
 
 </body>
 </html>
+
+
